# protocoler

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  go.mod  go.sum  main.go
cmd/: protocoler.go
src/: cli.rs  dialog.rs  error.rs  help.rs  main.rs  persist.rs  record.rs  report.rs  style.rs  table.rs  util.rs
tests/: cli_tests.rs
tests/cmd/: README-19.stdout
