[package]
name = "protocoler"
version = "0.3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
chrono = "0.4.19"
cursive_table_view = "0.14"

[dependencies.cursive]
version = "*"
default-features = false
features = ["crossterm-backend"]
